# hjkai-v2

./: LICENSE  README.md  index.html  pyproject.toml
src/hjkai/: cli.py  gui.py
src/hjkai/core/: brain_a_doer.py  brain_b_hunter.py  commander.py  config.py  private_comm.py  safety.py  why_engine.py
