[project]
name = "hjkai-v2"
version = "2.0.0"
description = "HJKAI V2 - Mind-Like Adversarial Dual-Brain AI Framework"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.6",
    "nltk>=3.9",
    "scikit-learn>=1.5",
    "spacy>=3.7",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "networkx>=3.3",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10",
    "langdetect>=1.0",
    "beautifulsoup4>=4.12",
    "requests>=2.32",
    "python-pptx>=1.0",
]

[project.scripts]
hjkai = "hjkai.gui:run_gui"
hjkai-cli = "hjkai.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
